--- a/LoadCell_OwnProgram/LoadCell_OwnProgram.csproj
+++ b/LoadCell_OwnProgram/LoadCell_OwnProgram.csproj
@@ -43,11 +43,8 @@
       <HintPath>..\packages\Google.Protobuf.3.21.9\lib\net45\Google.Protobuf.dll</HintPath>
     </Reference>
     <Reference Include="netstandard, Version=2.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
-    <Reference Include="SpinnakerNETGUI_v140">
-      <HintPath>..\..\..\..\..\..\Program Files\FLIR Systems\Spinnaker\bin\vs2015\SpinnakerNETGUI_v140.dll</HintPath>
-    </Reference>
-    <Reference Include="SpinnakerNET_v140">
-      <HintPath>..\..\..\..\..\..\Program Files\FLIR Systems\Spinnaker\bin\vs2015\SpinnakerNET_v140.dll</HintPath>
+    <Reference Include="SpinnakerNETd_v140">
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\FLIR Systems\Spinnaker\bin\vs2015\SpinnakerNETd_v140.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
@@ -74,6 +71,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CameraClass.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
